--- a/labs/lab02-review.ipynb
+++ b/labs/lab02-review.ipynb
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Hamilton-at-CapU/comp215/blob/main/labs/lab02-review.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Sung4ji3/comp215/blob/main/labs/lab02-review.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,8 +40,8 @@
       "source": [
         "COMP 215 - LAB 2\n",
         "----------------\n",
-        "#### Name(s):\n",
-        "#### Date:\n",
+        "#### Name(s): Marcus Leung\n",
+        "#### Date: 2025-01-15\n",
         "\n",
         "By the end of this lab you should be able to:\n",
         "  * use strings, tuples, lists, and dictionaries (review)\n",
@@ -1822,10 +1822,108 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'absolute_magnitude_h': 19.62,\n",
+            "  'close_approach_data': [{'close_approach_date': '2023-01-09',\n",
+            "                           'close_approach_date_full': '2023-Jan-09 13:59',\n",
+            "                           'epoch_date_close_approach': 1673272740000,\n",
+            "                           'miss_distance': {'astronomical': '0.0725378623',\n",
+            "                                             'kilometers': '10851509.694433301',\n",
+            "                                             'lunar': '28.2172284347',\n",
+            "                                             'miles': '6742815.4556135138'},\n",
+            "                           'orbiting_body': 'Earth',\n",
+            "                           'relative_velocity': {'kilometers_per_hour': '32387.3479203461',\n",
+            "                                                 'kilometers_per_second': '8.9964855334',\n",
+            "                                                 'miles_per_hour': '20124.2384897284'}}],\n",
+            "  'estimated_diameter': {'feet': {'estimated_diameter_max': 2322.8706681664,\n",
+            "                                  'estimated_diameter_min': 1038.8193433921},\n",
+            "                         'kilometers': {'estimated_diameter_max': 0.708010957,\n",
+            "                                        'estimated_diameter_min': 0.3166321257},\n",
+            "                         'meters': {'estimated_diameter_max': 708.0109570008,\n",
+            "                                    'estimated_diameter_min': 316.6321257337},\n",
+            "                         'miles': {'estimated_diameter_max': 0.4399374764,\n",
+            "                                   'estimated_diameter_min': 0.1967460206}},\n",
+            "  'id': '2226554',\n",
+            "  'is_potentially_hazardous_asteroid': True,\n",
+            "  'is_sentry_object': False,\n",
+            "  'links': {'self': 'http://api.nasa.gov/neo/rest/v1/neo/2226554?api_key=4Hw4uU4Fgbo7BBHGoBEtrpkST4XzcKA18Q4PMqeH'},\n",
+            "  'name': '226554 (2003 WR21)',\n",
+            "  'nasa_jpl_url': 'https://ssd.jpl.nasa.gov/tools/sbdb_lookup.html#/?sstr=2226554',\n",
+            "  'neo_reference_id': '2226554'},\n",
+            " {'absolute_magnitude_h': 20.95,\n",
+            "  'close_approach_data': [{'close_approach_date': '2023-01-09',\n",
+            "                           'close_approach_date_full': '2023-Jan-09 03:25',\n",
+            "                           'epoch_date_close_approach': 1673234700000,\n",
+            "                           'miss_distance': {'astronomical': '0.1211166399',\n",
+            "                                             'kilometers': '18118791.350597013',\n",
+            "                                             'lunar': '47.1143729211',\n",
+            "                                             'miles': '11258494.8819162594'},\n",
+            "                           'orbiting_body': 'Earth',\n",
+            "                           'relative_velocity': {'kilometers_per_hour': '22658.3665761987',\n",
+            "                                                 'kilometers_per_second': '6.2939907156',\n",
+            "                                                 'miles_per_hour': '14079.0278317497'}}],\n",
+            "  'estimated_diameter': {'feet': {'estimated_diameter_max': 1258.997970434,\n",
+            "                                  'estimated_diameter_min': 563.0410090849},\n",
+            "                         'kilometers': {'estimated_diameter_max': 0.3837425691,\n",
+            "                                        'estimated_diameter_min': 0.1716148941},\n",
+            "                         'meters': {'estimated_diameter_max': 383.7425691085,\n",
+            "                                    'estimated_diameter_min': 171.6148940774},\n",
+            "                         'miles': {'estimated_diameter_max': 0.2384465039,\n",
+            "                                   'estimated_diameter_min': 0.1066365183}},\n",
+            "  'id': '2508908',\n",
+            "  'is_potentially_hazardous_asteroid': True,\n",
+            "  'is_sentry_object': False,\n",
+            "  'links': {'self': 'http://api.nasa.gov/neo/rest/v1/neo/2508908?api_key=4Hw4uU4Fgbo7BBHGoBEtrpkST4XzcKA18Q4PMqeH'},\n",
+            "  'name': '508908 (2003 YX1)',\n",
+            "  'nasa_jpl_url': 'https://ssd.jpl.nasa.gov/tools/sbdb_lookup.html#/?sstr=2508908',\n",
+            "  'neo_reference_id': '2508908'},\n",
+            " {'absolute_magnitude_h': 21.42,\n",
+            "  'close_approach_data': [{'close_approach_date': '2023-01-09',\n",
+            "                           'close_approach_date_full': '2023-Jan-09 07:10',\n",
+            "                           'epoch_date_close_approach': 1673248200000,\n",
+            "                           'miss_distance': {'astronomical': '0.4928732055',\n",
+            "                                             'kilometers': '73732781.722872285',\n",
+            "                                             'lunar': '191.7276769395',\n",
+            "                                             'miles': '45815426.073056133'},\n",
+            "                           'orbiting_body': 'Earth',\n",
+            "                           'relative_velocity': {'kilometers_per_hour': '121198.8588141982',\n",
+            "                                                 'kilometers_per_second': '33.6663496706',\n",
+            "                                                 'miles_per_hour': '75308.2575781889'}}],\n",
+            "  'estimated_diameter': {'feet': {'estimated_diameter_max': 1013.9698229009,\n",
+            "                                  'estimated_diameter_min': 453.461090228},\n",
+            "                         'kilometers': {'estimated_diameter_max': 0.3090579921,\n",
+            "                                        'estimated_diameter_min': 0.1382149359},\n",
+            "                         'meters': {'estimated_diameter_max': 309.0579921303,\n",
+            "                                    'estimated_diameter_min': 138.2149358786},\n",
+            "                         'miles': {'estimated_diameter_max': 0.1920396736,\n",
+            "                                   'estimated_diameter_min': 0.0858827529}},\n",
+            "  'id': '3014110',\n",
+            "  'is_potentially_hazardous_asteroid': True,\n",
+            "  'is_sentry_object': False,\n",
+            "  'links': {'self': 'http://api.nasa.gov/neo/rest/v1/neo/3014110?api_key=4Hw4uU4Fgbo7BBHGoBEtrpkST4XzcKA18Q4PMqeH'},\n",
+            "  'name': '(1998 SU4)',\n",
+            "  'nasa_jpl_url': 'https://ssd.jpl.nasa.gov/tools/sbdb_lookup.html#/?sstr=3014110',\n",
+            "  'neo_reference_id': '3014110'}]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ex. 1 your code here"
+        "import datetime, json, requests\n",
+        "from pprint import pprint\n",
+        "today = '2023-01-09'\n",
+        "API_KEY = '4Hw4uU4Fgbo7BBHGoBEtrpkST4XzcKA18Q4PMqeH'\n",
+        "url = f'https://api.nasa.gov/neo/rest/v1/feed?start_date={today}&end_date={today}&api_key={API_KEY}'\n",
+        "response = requests.request(\"GET\", url, headers={}, data={})\n",
+        "data = json.loads(response.text)\n",
+        "n_results = data['element_count']\n",
+        "neos = data['near_earth_objects'][today]\n",
+        "hazards = list(filter(lambda item: item['is_potentially_hazardous_asteroid'] == True, neos))\n",
+        "pprint(hazards)\n"
       ],
       "metadata": {
         "pycharm": {
@@ -1835,7 +1933,11 @@
           "end_time": "2024-01-04T04:05:43.069849Z",
           "start_time": "2024-01-04T04:05:43.065922Z"
         },
-        "id": "ewkwkc8wmxBB"
+        "id": "ewkwkc8wmxBB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3a588f1d-f2b6-451a-eaa2-66c7f35a7bae"
       }
     },
     {
@@ -1862,7 +1964,25 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ex. 2 your code here"
+        "import datetime, json, requests\n",
+        "from pprint import pprint\n",
+        "today = '2023-01-09'\n",
+        "API_KEY = '4Hw4uU4Fgbo7BBHGoBEtrpkST4XzcKA18Q4PMqeH'\n",
+        "url = f'https://api.nasa.gov/neo/rest/v1/feed?start_date={today}&end_date={today}&api_key={API_KEY}'\n",
+        "response = requests.request(\"GET\", url, headers={}, data={})\n",
+        "data = json.loads(response.text)\n",
+        "n_results = data['element_count']\n",
+        "neos = data['near_earth_objects'][today]\n",
+        "hazards = list(filter(lambda item: item['is_potentially_hazardous_asteroid'] == True, neos))\n",
+        "cad_list_func = lambda items: (items['close_approach_data'])\n",
+        "cad_list = list(map(cad_list_func, hazards))\n",
+        "def foo(cad_list):\n",
+        "  miss_dists = [float(item[0]['miss_distance']['kilometers']) for item in cad_list]\n",
+        "  closest_dist = min(miss_dists)\n",
+        "  date_cd = [item[0]['close_approach_date'] for item in cad_list if float(item[0]['miss_distance']['kilometers']) == closest_dist]\n",
+        "  twotuple = (date_cd[0], str(closest_dist))\n",
+        "  return(twotuple)\n",
+        "assert type(foo(cad_list) == tuple)"
       ],
       "metadata": {
         "id": "tiyXTDfnZAd0",
@@ -1871,7 +1991,7 @@
           "start_time": "2024-01-04T04:05:43.787064Z"
         }
       },
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": []
     },
     {
