--- a/labs/lab02-review.ipynb
+++ b/labs/lab02-review.ipynb
@@ -1975,22 +1975,20 @@
         "neos = data['near_earth_objects'][today]\n",
         "hazards = list(filter(lambda item: item['is_potentially_hazardous_asteroid'] == True, neos))\n",
         "pprint(hazards)\n",
-        "cad_list = list(map(lambda hazard: (hazard['close_approach_data']), hazards))\n",
-        "# cad_list = [hazards[i]['close_approach_data']for i in range(len(hazards))]\n",
-        "# cad_list = list(cad_list)\n",
+        "cad_list = [hazards[i]['close_approach_data'] for i in range(len(hazards))]\n",
         "pprint(cad_list)\n",
         "\n",
         "def closestevent_iso_km(cad_list):\n",
         "  \"\"\"\n",
-        "  Takes a list of close-approach events, and returns the YYYY-MM-DD ISO-format date and kilometer distance from the event in the list which had the least distance from Earth.\n",
+        "  Takes a list of close-approach events, and returns the YYYY-MM-DD ISO-format date and the kilometer distance of the event in the list which was least distant from Earth.\n",
         "  Returned values are given in a tuple as a pair of strings.\n",
         "  \"\"\"\n",
-        "  miss_dists = [float(item[0]['miss_distance']['kilometers']) for item in cad_list]\n",
-        "  closest_dist = min(miss_dists)\n",
+        "  closest_dist = min([float(item[0]['miss_distance']['kilometers']) for item in cad_list])\n",
         "  date_cd = [item[0]['close_approach_date'] for item in cad_list if float(item[0]['miss_distance']['kilometers']) == closest_dist]\n",
         "  twotuple = (date_cd[0], str(closest_dist))\n",
         "  return(twotuple)\n",
-        "assert type(closestevent_iso_km(cad_list) == tuple)"
+        "assert type(closestevent_iso_km(cad_list) == tuple)\n",
+        "assert len(closestevent_iso_km(cad_list)) == 2"
       ],
       "metadata": {
         "id": "tiyXTDfnZAd0",
@@ -1998,12 +1996,12 @@
           "end_time": "2024-01-04T04:05:43.790535Z",
           "start_time": "2024-01-04T04:05:43.787064Z"
         },
-        "outputId": "e6c08dce-6b7d-4727-acb7-80db2b938a4b",
+        "outputId": "367bc963-487b-4d64-868b-0fb37c511791",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -2128,24 +2126,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fsC8xijfdkpK"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "IXHWlB1HdjrH"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "## Challenge Exercise\n",
@@ -2169,7 +2149,31 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ex. 3 (challenge) your code here"
+        "import datetime, json, requests\n",
+        "from pprint import pprint\n",
+        "today = str(datetime.date.today())\n",
+        "tolastweek = str(datetime.date.today() - datetime.timedelta(weeks=1))\n",
+        "API_KEY = '4Hw4uU4Fgbo7BBHGoBEtrpkST4XzcKA18Q4PMqeH'\n",
+        "url = f'https://api.nasa.gov/neo/rest/v1/feed?start_date={tolastweek}&end_date={today}&api_key={API_KEY}'\n",
+        "response = requests.request(\"GET\", url, headers={}, data={})\n",
+        "data = json.loads(response.text)\n",
+        "weekneoskeys = [daykey for daykey in data['near_earth_objects']]\n",
+        "listsofneoslists = [data['near_earth_objects'][f'{dayvalue}'] for dayvalue in weekneoskeys]\n",
+        "allweekneos = [neosdict for neoslist in listsofneoslists for neosdict in neoslist]\n",
+        "cad_list = list(map(lambda hazard: (hazard['close_approach_data']), allweekneos))\n",
+        "def closesteventofweek_id_iso_km(cad_list):\n",
+        "  \"\"\"\n",
+        "  Takes a list of close-approach events, and returns the ID, the YYYY-MM-DD ISO-format date, and the kilometer distance of the NEO event in the list which was least distant from Earth.\n",
+        "  Returned values are given in a tuple as three strings.\n",
+        "  \"\"\"\n",
+        "  closest_dist = min([float(item[0]['miss_distance']['kilometers']) for item in cad_list])\n",
+        "  closest_dist_neo = list(filter(lambda neosdict: (neosdict['close_approach_data'][0]['miss_distance']['kilometers'] == str(closest_dist)), allweekneos))\n",
+        "  date_cd = closest_dist_neo[0]['close_approach_data'][0]['close_approach_date']\n",
+        "  neo_id = closest_dist_neo[0]['id']\n",
+        "  return (neo_id, date_cd, str(closest_dist))\n",
+        "\n",
+        "id, date, dist = closesteventofweek_id_iso_km(cad_list)\n",
+        "print(f'The NEO that came closest to Earth this week has the ID known as {id}, had come on {date}, and was {dist} km away.')"
       ],
       "metadata": {
         "id": "Ds1YevErlzCe",
@@ -2179,10 +2183,22 @@
         "ExecuteTime": {
           "end_time": "2024-01-04T04:05:43.790766Z",
           "start_time": "2024-01-04T04:05:43.789211Z"
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9bf1e2e4-5b7d-4959-b239-c1807dd312a6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The NEO that came closest to Earth this week has the ID known as 54516006, had come on 2025-01-11, and was 228199.88205114 km away\n"
+          ]
+        }
+      ]
     }
   ]
 }
