--- a/labs/lab03-classes.ipynb
+++ b/labs/lab03-classes.ipynb
@@ -51,10 +51,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 103,
       "outputs": [],
       "source": [
         "import datetime, json, requests\n",
+        "from datetime import datetime\n",
         "from pprint import pprint    # Pretty Print - built-in python function to nicely format data structures\n",
         "import dataclasses"
       ],
@@ -102,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,8 +590,8 @@
         "week_start = '2023-01-15'\n",
         "neos = get_neos(week_start)\n",
         "assert len(neos) > 0, f'Oh oh!  No NEOs found for {week_start}'\n",
-        "neo = get_neo(neos[-1]['id'])  # get the very latest NEO\n",
-        "pprint(neo)"
+        "particularneo = get_neo(neos[-1]['id'])  # get the very latest NEO\n",
+        "pprint(particularneo)"
       ],
       "metadata": {
         "pycharm": {
@@ -600,11 +601,11 @@
           "end_time": "2024-01-04T04:11:12.889668Z",
           "start_time": "2024-01-04T04:10:54.383166Z"
         },
-        "id": "SmrmY6h-JfJO",
-        "outputId": "2fed3764-04be-40e8-bc6d-f8305980da5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SmrmY6h-JfJO",
+        "outputId": "662d66b7-8ccf-470f-ff42-9d8595ff469d"
       }
     },
     {
@@ -638,7 +639,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,18 +650,21 @@
         }
       ],
       "source": [
-        "class NEO:\n",
-        "  \"\"\"A type of asteroid object which is near Earth's orbit, as categorized by NASA with an identification-number, a name, a minimum estimated diameter in meters, and a true/false value depending on if it is a potential hazard to the Earth.\"\"\"\n",
+        "class asteroid:\n",
+        "  \"\"\"A type of asteroid object which is near Earth, as categorized by NASA with an identification-number, a name, a minimum estimated diameter in meters, and a true/false value depending on if it is a potential hazard to the Earth.\"\"\"\n",
         "  def __init__(self, id:str, name:str, m_est_diam_m:float, ishazard:bool):\n",
-        "    self.id=id\n",
-        "    self.name=name\n",
-        "    self.m_est_diam_m=m_est_diam_m\n",
-        "    self.ishazard=ishazard\n",
+        "    self.id = id\n",
+        "    self.name = name\n",
+        "    self.m_est_diam_m = m_est_diam_m\n",
+        "    self.ishazard = ishazard\n",
         "\n",
         "  def __str__(self):\n",
         "    return f'id: {self.id}, name: {self.name}, minimum estimated diameter in meters: {self.m_est_diam_m}, is potential hazard: {self.ishazard}'\n",
         "\n",
-        "a1 = NEO('54339874','(2023 BM1)', 28.3501249023, False)\n",
+        "  def __repr__(self):\n",
+        "    return f'asteroid(\\'{self.id}\\', \\'{self.name}\\', \\'{self.m_est_diam_m}\\', \\'{self.ishazard}\\')'\n",
+        "\n",
+        "a1 = asteroid('54339874','(2023 BM1)', 28.3501249023, False)\n",
         "print(a1)"
       ],
       "metadata": {
@@ -671,11 +675,11 @@
           "end_time": "2024-01-04T04:11:12.891665Z",
           "start_time": "2024-01-04T04:11:12.889274Z"
         },
-        "id": "kKaX_cJ5JfJS",
-        "outputId": "3441aae4-033d-42cf-9a7b-6c40d14e7150",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kKaX_cJ5JfJS",
+        "outputId": "916acb72-7189-4954-c03c-02ca3090420b"
       }
     },
     {
@@ -706,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,32 +721,35 @@
         }
       ],
       "source": [
-        "class NEO:\n",
+        "#here, due to putting class and classmethod in their own code blocks causing total separation of the two leading to an error when running all codeblocks, I repasted the asteroid class definition into this codeblock. You'll keep seeing repastes like these in future answer codeblocks\n",
+        "class asteroid:\n",
         "  \"\"\"A type of asteroid object which is near Earth's orbit, as categorized by NASA with an identification-number, a name, a minimum estimated diameter in meters, and a true/false value depending on if it is a potential hazard to the Earth.\"\"\"\n",
         "  def __init__(self, id:str, name:str, m_est_diam_m:float, ishazard:bool):\n",
-        "    self.id=id\n",
-        "    self.name=name\n",
-        "    self.m_est_diam_m=m_est_diam_m\n",
-        "    self.ishazard=ishazard\n",
+        "    self.id = id\n",
+        "    self.name = name\n",
+        "    self.m_est_diam_m = m_est_diam_m\n",
+        "    self.ishazard = ishazard\n",
         "\n",
         "  def __str__(self):\n",
         "    return f'id: {self.id}, name: {self.name}, minimum estimated diameter in meters: {self.m_est_diam_m}, is potential hazard: {self.ishazard}'\n",
+        "\n",
+        "  def __repr__(self):\n",
+        "    return (self.id, self.name, self.m_est_diam_m, self.ishazard)\n",
         "\n",
         "  def __call__(self):\n",
         "    return self\n",
         "\n",
         "  @classmethod\n",
-        "  def from_NEO(cls, neo_id):\n",
+        "  def identified_NEO(cls, neo_id):\n",
         "    got_neo = get_neo(neo_id)\n",
-        "    id=got_neo['id']\n",
-        "    name=got_neo['name']\n",
-        "    m_est_diam_m=got_neo['estimated_diameter']['meters']['estimated_diameter_min']\n",
-        "    ishazard=got_neo['is_potentially_hazardous_asteroid']\n",
+        "    id = got_neo['id']\n",
+        "    name = got_neo['name']\n",
+        "    m_est_diam_m = got_neo['estimated_diameter']['meters']['estimated_diameter_min']\n",
+        "    ishazard = got_neo['is_potentially_hazardous_asteroid']\n",
         "    givenNEO = cls(id, name, m_est_diam_m, ishazard)\n",
-        "    descript = str(givenNEO)\n",
         "    return givenNEO\n",
         "\n",
-        "fetched = NEO.from_NEO('54339874')\n",
+        "fetched = asteroid.identified_NEO('54339874')\n",
         "print(fetched)"
       ],
       "metadata": {
@@ -753,11 +760,11 @@
           "end_time": "2024-01-04T04:11:12.894705Z",
           "start_time": "2024-01-04T04:11:12.892046Z"
         },
-        "id": "CTyWhiCuJfJU",
-        "outputId": "7c60f5e6-1f13-4030-8bb4-fbd3096da99f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CTyWhiCuJfJU",
+        "outputId": "347210a8-a503-4cff-9e49-74123016dd0d"
       }
     },
     {
@@ -786,56 +793,74 @@
     {
       "cell_type": "code",
       "source": [
+        "def closestdate(datelist, start_date): #will need this for the classmethod. I learned this by referencing https://stackoverflow.com/a/32237949\n",
+        "  \"\"\"\n",
+        "  A helper-function for the CAOfactory class method that:\n",
+        "    1. Takes a list of dates from one close-approach-data record and the day used as the start_date in the get_neos function, with every date represented as a string with YYYY-MM-DD formatting\n",
+        "    2. Converts every date in the list and the start_date from string-form to datetime-object form\n",
+        "    3. Sorts the datetime-object list by least to most distant in time from the start_date\n",
+        "    4. Grabs the datetime-object that has the smallest difference between itself and the start_date, and then converts it back into string form to return\n",
+        "  \"\"\"\n",
+        "  dateobjlist = [datetime.strptime(entry['close_approach_date'], '%Y-%m-%d') for entry in datelist]\n",
+        "  startdateobj = datetime.strptime(start_date, '%Y-%m-%d')\n",
+        "  closestdateobj = min(dateobjlist, key=lambda date: abs(date - startdateobj))\n",
+        "  closestday = closestdateobj.strftime('%Y-%m-%d')\n",
+        "  return closestday\n",
+        "\n",
         "class CloseApproach:\n",
-        "  \"\"\" \"\"\"\n",
+        "  \"\"\"A type of data catalog for a single close-approach event of one asteroid, containing the following:\n",
+        "      -The data container representing the near-Earth-object itself\n",
+        "      -The orbiting body which the near-Earth-object was orientated to\n",
+        "      -The datetime-object representing the date of when the close-approach event happened\n",
+        "      -The minimum estimated miss-distance between the near-Earth-object and Earth, measured in kilometers\n",
+        "      -The relative-velocity of the near-Earth-object, in terms of displacement over time measured in kilometers-per-hour\n",
+        "  \"\"\"\n",
         "  def __init__(self, neo:object, orbitingbody:str, approachdate:object, missdist_km:float, relvel_kph:float):\n",
-        "    self.neo=neo\n",
-        "    self.orbitingbody=orbitingbody\n",
-        "    self.approachdate=approachdate\n",
-        "    self.missdist_km=missdist_km\n",
-        "    self.relvel_kph=relvel_kph\n",
+        "    self.neo = neo\n",
+        "    self.orbitingbody = orbitingbody\n",
+        "    self.approachdate = approachdate\n",
+        "    self.missdist_km = missdist_km\n",
+        "    self.relvel_kph = relvel_kph\n",
         "\n",
         "  def __str__(self):\n",
         "    return f'neo:{self.neo}, orbitingbody:{self.orbitingbody}, approachdate:{self.approachdate}, missdist_km:{self.missdist_km}, relvel_kph:{self.relvel_kph}'\n",
         "\n",
         "  @classmethod\n",
-        "  def CAOfactory(cls, NEO):\n",
-        "    neo=NEO\n",
-        "    NEOdata=NEO.from_neo(NEO, neo.id)\n",
-        "    orbitingbody=NEOdata['orbiting_body']\n",
-        "    approachdate=datetime.strptime(NEOdata['close_approach_date'], '%Y-%m-%d')\n",
-        "    missdist_km=float(NEOdata['miss_distance']['kilometers'])\n",
-        "    relvel_kph=float(NEOdata['relative_velocity']['kilometers_per_hour'])\n",
-        "    givenCAO=cls(neo, orbitingbody, approachdate, missdist_km, relvel_kph)\n",
-        "    return givenCAO, str(givenCAO)\n",
+        "  def CAOfactory(cls, neo):\n",
+        "    NEOtuple = asteroid.__repr__(neo)\n",
+        "    neo_id = NEOtuple[0]\n",
+        "    entire_neo = get_neo(neo_id)\n",
+        "    entire_CAD_list = entire_neo['close_approach_data']\n",
+        "    neo_event = closestdate(entire_CAD_list, week_start)\n",
+        "    neo_event_entry = [entry for entry in entire_CAD_list if entry['close_approach_date'] == neo_event]\n",
+        "    orbitingbody = neo_event_entry[0]['orbiting_body']\n",
+        "    approachdate = neo_event\n",
+        "    missdist_km = float(neo_event_entry[0]['miss_distance']['kilometers'])\n",
+        "    relvel_kph = float(neo_event_entry[0]['relative_velocity']['kilometers_per_hour'])\n",
+        "    givenCAO = cls(neo.__repr__(), orbitingbody, approachdate, missdist_km, relvel_kph)\n",
+        "    return givenCAO\n",
         "\n",
         "taken = CloseApproach.CAOfactory(fetched)\n",
         "print(taken)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 315
+          "base_uri": "https://localhost:8080/"
         },
         "id": "tiyXTDfnZAd0",
-        "outputId": "7a0c59cf-53aa-4dae-ada9-9bd4d921f182",
+        "outputId": "599a2f64-12ec-496b-da84-c6e41585067c",
         "ExecuteTime": {
           "end_time": "2024-01-04T04:11:12.898030Z",
           "start_time": "2024-01-04T04:11:12.895465Z"
         }
       },
-      "execution_count": 77,
+      "execution_count": 107,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'NEO' object has no attribute 'from_neo'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-77-87b9bb8e874b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mgivenCAO\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgivenCAO\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mtaken\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCloseApproach\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCAOfactory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfetched\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtaken\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-77-87b9bb8e874b>\u001b[0m in \u001b[0;36mCAOfactory\u001b[0;34m(cls, NEO)\u001b[0m\n\u001b[1;32m     14\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mCAOfactory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNEO\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mneo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNEO\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mNEOdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNEO\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_neo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNEO\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m     \u001b[0morbitingbody\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNEOdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'orbiting_body'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mapproachdate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mNEOdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'close_approach_date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'%Y-%m-%d'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'NEO' object has no attribute 'from_neo'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "neo:('54339874', '(2023 BM1)', 28.3501249023, False), orbitingbody:Earth, approachdate:2023-01-18, missdist_km:12324076.417537022, relvel_kph:42918.8831905878\n"
           ]
         }
       ]
@@ -871,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 108,
       "outputs": [],
       "source": [
         "# Ex. 4 your code here"
@@ -926,7 +951,7 @@
           "start_time": "2024-01-04T04:11:12.900180Z"
         }
       },
-      "execution_count": null,
+      "execution_count": 109,
       "outputs": []
     }
   ]
