--- a/labs/lab03-classes.ipynb
+++ b/labs/lab03-classes.ipynb
@@ -29,8 +29,8 @@
       "source": [
         "COMP 215 - LAB 3 Classes (NEO)\n",
         "----------------\n",
-        "#### Name:\n",
-        "#### Date:\n",
+        "#### Name: Marcus Leung\n",
+        "#### Date: Exercises 1-4 answers written on January 22 2025\n",
         "\n",
         "This lab exercise introduces `class` as a means of organizing related data and functions.\n",
         "\n",
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "import datetime, json, requests\n",
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +639,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +854,7 @@
           "start_time": "2024-01-04T04:11:12.895465Z"
         }
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -896,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,7 +1064,7 @@
           "start_time": "2024-01-04T04:11:12.900180Z"
         }
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": []
     }
   ]
