--- a/labs/lab04-more_classes.ipynb
+++ b/labs/lab04-more_classes.ipynb
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Hamilton-at-CapU/comp215/blob/main/labs/lab04-more_classes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Sung4ji3/comp215/blob/main/labs/lab04-more_classes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,7 +40,7 @@
       "source": [
         "COMP 215 - LAB 4\n",
         "----------------\n",
-        "#### Name(s):\n",
+        "#### Name(s): Marcus Leung\n",
         "#### Date:\n",
         "\n",
         "By the end of this lab you should be able to:\n",
@@ -166,7 +166,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ex. 1 your code here"
+        "@dataclass\n",
+        "class ClAp():\n",
+        ""
       ],
       "metadata": {
         "id": "tiyXTDfnZAd0",
@@ -217,7 +219,12 @@
       "execution_count": null,
       "outputs": [],
       "source": [
-        "# Ex. 2 your code here"
+        "@dataclass\n",
+        "class asteroid():\n",
+        "    close_approaches: List = field(default_factory=lambda: []) # https://stackoverflow.com/a/52064202\n",
+        "\n",
+        "    @classmethod\n",
+        "    def"
       ],
       "metadata": {
         "ExecuteTime": {
