--- a/labs/lab04-more_classes.ipynb
+++ b/labs/lab04-more_classes.ipynb
@@ -73,7 +73,10 @@
       "source": [
         "# import necessary modules\n",
         "import datetime, json, requests\n",
-        "from pprint import pprint"
+        "from pprint import pprint\n",
+        "from dataclasses import dataclass\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.dates as mdates"
       ],
       "metadata": {
         "pycharm": {
@@ -167,8 +170,8 @@
       "cell_type": "code",
       "source": [
         "@dataclass\n",
-        "class ClAp():\n",
-        ""
+        "class CloseApproach:\n",
+        "\n"
       ],
       "metadata": {
         "id": "tiyXTDfnZAd0",
@@ -221,10 +224,14 @@
       "source": [
         "@dataclass\n",
         "class asteroid():\n",
-        "    close_approaches: List = field(default_factory=lambda: []) # https://stackoverflow.com/a/52064202\n",
+        "  id: str\n",
+        "  name: str\n",
+        "  m_est_diam_m: float\n",
+        "  ishazard: bool\n",
+        "  close_approaches: list = field(default_factory=lambda: []) # https://stackoverflow.com/a/52064202\n",
         "\n",
-        "    @classmethod\n",
-        "    def"
+        "  @classmethod\n",
+        "  def"
       ],
       "metadata": {
         "ExecuteTime": {
