--- a/labs/lab04-more_classes.ipynb
+++ b/labs/lab04-more_classes.ipynb
@@ -171,7 +171,32 @@
       "source": [
         "@dataclass\n",
         "class CloseApproach:\n",
-        "\n"
+        "  neo: object\n",
+        "  orbitingbody: str\n",
+        "  approachdate: object\n",
+        "  missdist_km: float\n",
+        "  relvel_kph: float\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return f'neo:{self.neo}, orbitingbody:{self.orbitingbody}, approachdate:{self.approachdate}, missdist_km:{self.missdist_km}, relvel_kph:{self.relvel_kph}'\n",
+        "\n",
+        "  def __repr__(self):\n",
+        "    return (self.neo, self.orbitingbody, self.approachdate, self.missdist_km, self.relvel_kph)\n",
+        "\n",
+        "  @classmethod\n",
+        "  def CAOfactory(cls, neo):\n",
+        "    NEOtuple = asteroid.__repr__(neo)\n",
+        "    neo_id = NEOtuple[0]\n",
+        "    entire_neo = get_neo(neo_id)\n",
+        "    entire_CAD_list = entire_neo['close_approach_data']\n",
+        "    neo_event = closestdate(entire_CAD_list, week_start)\n",
+        "    neo_event_entry = [entry for entry in entire_CAD_list if entry['close_approach_date'] == neo_event]\n",
+        "    orbitingbody = neo_event_entry[0]['orbiting_body']\n",
+        "    approachdate = neo_event\n",
+        "    missdist_km = float(neo_event_entry[0]['miss_distance']['kilometers'])\n",
+        "    relvel_kph = float(neo_event_entry[0]['relative_velocity']['kilometers_per_hour'])\n",
+        "    givenCAO = cls(neo.__repr__(), orbitingbody, approachdate, missdist_km, relvel_kph)\n",
+        "    return givenCAO\n"
       ],
       "metadata": {
         "id": "tiyXTDfnZAd0",
@@ -230,8 +255,56 @@
         "  ishazard: bool\n",
         "  close_approaches: list = field(default_factory=lambda: []) # https://stackoverflow.com/a/52064202\n",
         "\n",
+        "  def __str__(self):\n",
+        "    return f'id: {self.id}, name: {self.name}, minimum estimated diameter in meters: {self.m_est_diam_m}, is potential hazard: {self.ishazard}, close_approaches:{self.close_approaches}'\n",
+        "\n",
+        "  def __repr__(self):\n",
+        "    return (self.id, self.name, self.m_est_diam_m, self.ishazard, self.close_approaches)\n",
+        "\n",
+        "  def __call__(self):\n",
+        "    return self\n",
+        "\n",
         "  @classmethod\n",
-        "  def"
+        "  def identified_NEO(cls, neo_id):\n",
+        "    got_neo = get_neo(neo_id)\n",
+        "    id = got_neo['id']\n",
+        "    name = got_neo['name']\n",
+        "    m_est_diam_m = got_neo['estimated_diameter']['meters']['estimated_diameter_min']\n",
+        "    ishazard = got_neo['is_potentially_hazardous_asteroid']\n",
+        "    close_approaches = [entry for entry in got_neo['close_approach_data']]\n",
+        "    givenNEO = cls(id, name, m_est_diam_m, ishazard, close_approaches)\n",
+        "    return givenNEO\n",
+        "\n",
+        "  @classmethod\n",
+        "  def nearest_miss(cls):\n",
+        "    numlist = [float(entry['miss_distance']['kilometers']) for entry in self.close_approaches]\n",
+        "    smallest_dist = min(numlist)\n",
+        "    smallest_dist_entry = [entry for entry in self.close_approaches if entry['miss_distance']['kilometers'] == str(smallest_dist)]\n",
+        "    neo = asteroid.identified_NEO(self.id)\n",
+        "    orbitingbody =  smallest_dist_entry[0]['orbiting_body']\n",
+        "    approachdate = smallest_dist_entry[0]['close_approach_date'] #this means that nearest_miss is a different factory from CAOfactory, because there is only one date to choose from (the day of the nearest miss)\n",
+        "    missdist_km = float(smallest_dist_entry[0]['miss_distance']['kilometers'])\n",
+        "    relvel_kph = float(smallest_dist_entry[0]['relative_velocity']['kilometers_per_hour'])\n",
+        "    return CloseApproach(neo.__repr__(), orbitingbody, approachdate, missdist_km, relvel_kph)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def closestdate(datelist, start_date):\n",
+        "  \"\"\"\n",
+        "  A helper-function for the CAOfactory class method that:\n",
+        "    1. Takes a list of dates from one close-approach-data record and the day used as the start_date in the get_neos function, with every date represented as a string with YYYY-MM-DD formatting\n",
+        "    2. Converts every date in the list and the start_date from string-form to datetime-object form\n",
+        "    3. Sorts the datetime-object list by least to most distant in time from the start_date\n",
+        "    4. Grabs the datetime-object that has the smallest difference between itself and the start_date, and then converts it back into string form to return\n",
+        "  \"\"\"\n",
+        "  dateobjlist = [datetime.strptime(entry['close_approach_date'], '%Y-%m-%d') for entry in datelist]\n",
+        "  startdateobj = datetime.strptime(start_date, '%Y-%m-%d')\n",
+        "  closestdateobj = min(dateobjlist, key=lambda date: abs(date - startdateobj))\n",
+        "  closestday = closestdateobj.strftime('%Y-%m-%d')\n",
+        "  return closestday"
       ],
       "metadata": {
         "ExecuteTime": {
