--- a/labs/lab04-more_classes.ipynb
+++ b/labs/lab04-more_classes.ipynb
@@ -72,7 +72,8 @@
       "outputs": [],
       "source": [
         "# import necessary modules\n",
-        "import datetime, json, requests\n",
+        "import json, requests\n",
+        "from datetime import datetime\n",
         "from pprint import pprint\n",
         "from dataclasses import dataclass\n",
         "import matplotlib.pyplot as plt\n",
@@ -287,11 +288,6 @@
         "    relvel_kph = float(smallest_dist_entry[0]['relative_velocity']['kilometers_per_hour'])\n",
         "    return CloseApproach(neo.__repr__(), orbitingbody, approachdate, missdist_km, relvel_kph)\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "def closestdate(datelist, start_date):\n",
         "  \"\"\"\n",
         "  A helper-function for the CAOfactory class method that:\n",
@@ -330,7 +326,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ex. 3 your code here"
+        "def CAtimeline(aster)\n",
+        "  \"\"\"Takes an asteroid object and graphs all of its close approach events as dots along a horizon of years.\"\"\"\n",
+        "  fig, ax = plt.subplots\n",
+        "  ax.set_title(f'{aster.id} close approach timeline')\n",
+        "  eventdates = [entry['close_approach_dates'] for entry in aster.close_approaches]\n",
+        "  eventdateobjs = [datetime.strptime(d, \"%Y-%m-%d\") for date in eventdates]\n",
+        "  ax.xaxis.set(major_locator=mdates.YearLocator(), major_formatter=mdates.DateFormatter(\"%Y\"))\n",
+        "  ax.plot(events)\n",
+        "  ax.yaxis.set_visible(False)\n",
+        "  ax.spines[[\"left\", \"top\", \"right\"]].set_visible(False)\n",
+        "  plt.show()\n",
+        "\n",
+        "fetched = asteroid.identified_NEO('54339874')\n",
+        "CAtimeline(fetched)"
       ],
       "metadata": {
         "id": "T1rvLu9rW2Nn"
