--- a/labs/lab05_scaling.ipynb
+++ b/labs/lab05_scaling.ipynb
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "XAr1Vf5HiC6N"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "lHqZss26iNtY"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +145,7 @@
         },
         "outputId": "2ea08ef9-fa18-4e11-9d71-61dd38684b4b"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,42 +186,45 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "citynames = list(city_map.keys())\n",
         "unfilteredcombos = list(itertools.permutations(citynames))\n",
-        "combosnohome = [combo for combo in unfilteredcombos if combo[0] == 'A']\n",
-        "sums = []\n",
-        "for combo in combosnohome:\n",
-        "  sum = 0\n",
-        "  n = 0\n",
-        "  k = len(combo)\n",
-        "  while n + 1 < k:\n",
-        "    pair = (combo[n], combo[n+1])\n",
-        "    sum += distances[pair]\n",
-        "    n += 1\n",
-        "  sum += distances[(combo[-1], 'A')]\n",
-        "  sums.append(sum)\n",
-        "zipped = dict(zip(combosnohome, sums))\n",
-        "bestroutesum = min(sums)\n",
-        "bestroutenohome = next(filter(lambda combo: zipped[combo] == bestroutesum, combosnohome))\n",
-        "bestroute = [city for city in bestroutenohome]\n",
-        "bestroute.append('A')\n",
-        "print(bestroute, bestroutesum)"
+        "\n",
+        "def brutetravel(homecity):\n",
+        "  combosnohome = [combo for combo in unfilteredcombos if combo[0] == homecity]\n",
+        "  sums = []\n",
+        "  for combo in combosnohome:\n",
+        "    sum = 0\n",
+        "    n = 0\n",
+        "    k = len(combo)\n",
+        "    while n + 1 < k:\n",
+        "      pair = (combo[n], combo[n+1])\n",
+        "      sum += distances[pair]\n",
+        "      n += 1\n",
+        "    sum += distances[(combo[-1], homecity)]\n",
+        "    sums.append(sum)\n",
+        "  zipped = dict(zip(combosnohome, sums))\n",
+        "  bestroutesum = min(sums)\n",
+        "  bestroutenohome = next(filter(lambda combo: zipped[combo] == bestroutesum, combosnohome))\n",
+        "  bestroute = [city for city in bestroutenohome]\n",
+        "  bestroute.append(homecity)\n",
+        "  return (bestroute, bestroutesum)\n",
+        "\n",
+        "print(brutetravel('A'))"
       ],
       "metadata": {
         "id": "nLmzZgjwECtJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "757fb4cf-9c81-4d74-f542-7e4dce5deb67"
+        "outputId": "b2d6c54d-d3e9-49cc-966a-419906378bde"
       },
-      "execution_count": 115,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['A', 'C', 'B', 'E', 'D', 'A'] 279.8\n"
+            "(['A', 'C', 'B', 'E', 'D', 'A'], 279.8)\n"
           ]
         }
       ]
@@ -245,13 +248,33 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ex.2 your code here"
+        "def nearestcity(city):\n",
+        "  distkeysunfiltered = distances.keys()\n",
+        "  distkeysfiltered = list(filter(lambda tup: tup[0] == city, distkeysunfiltered))\n",
+        "  dists = [distances[dist] for dist in distkeysfiltered]\n",
+        "  shortestdist = min(dists)\n",
+        "  shortestroute = next(filter(lambda key: distances[key] == shortestdist, distkeysfiltered))\n",
+        "  return shortestroute[1]\n",
+        "\n",
+        "print(nearestcity('E'))"
       ],
       "metadata": {
-        "id": "jrsQQyMLEFZ2"
+        "id": "jrsQQyMLEFZ2",
+        "outputId": "39ac9c1f-c396-49b4-aea8-8dd092f9eda5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 111,
-      "outputs": []
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "D\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -272,7 +295,7 @@
       "metadata": {
         "id": "U9NFv5PkEKO4"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -294,7 +317,7 @@
       "metadata": {
         "id": "DBpuwJ5SSNJB"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": []
     }
   ]
