--- a/labs/lab05_scaling.ipynb
+++ b/labs/lab05_scaling.ipynb
@@ -248,22 +248,33 @@
     {
       "cell_type": "code",
       "source": [
-        "def nearestcity(city):\n",
-        "  distkeysunfiltered = distances.keys()\n",
-        "  distkeysfiltered = list(filter(lambda tup: tup[0] == city, distkeysunfiltered))\n",
+        "distkeys = distances.keys()\n",
+        "\n",
+        "def nearestnewcity(city, visited):\n",
+        "  distkeysunfiltered = list(filter(lambda tup: tup[1] not in visited, distkeys))\n",
+        "  distkeysfiltered = list(filter(lambda tup: tup[0] == city, distkeys))\n",
         "  dists = [distances[dist] for dist in distkeysfiltered]\n",
         "  shortestdist = min(dists)\n",
         "  shortestroute = next(filter(lambda key: distances[key] == shortestdist, distkeysfiltered))\n",
         "  return shortestroute[1]\n",
         "\n",
-        "print(nearestcity('E'))"
+        "def travelbynearest(homecity):\n",
+        "  visited = [homecity]\n",
+        "  start = nearestnewcity(homecity, visited)\n",
+        "  totaldist = distances[(homecity, start)]\n",
+        "  while  start != homecity:\n",
+        "    start1 = start\n",
+        "    start = nearestnewcity(start1, visited)\n",
+        "    visited.append(start)\n",
+        "    totaldist += distances[(start1, start)]\n",
+        "  return (visited, totaldist)"
       ],
       "metadata": {
         "id": "jrsQQyMLEFZ2",
-        "outputId": "39ac9c1f-c396-49b4-aea8-8dd092f9eda5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "39ac9c1f-c396-49b4-aea8-8dd092f9eda5"
       },
       "execution_count": 121,
       "outputs": [
